[package]
name = "korwin"
description = "Janusz Korwin-Mikke quotes generator"

repository = "https://github.com/karl0d/korwin.rs"
readme = "README.md"
license = "MIT"
keywords = ["korwin", "korwin-mikke"]

version = "0.2.0"
edition = "2021"

exclude = [
    ".github/*",
]

[dependencies]
rand = { version="0.8.5" }


